feat: api for register and login admins
